--- a/algolia-ionic/package.json
+++ b/algolia-ionic/package.json
@@ -25,24 +25,20 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
-    "algoliasearch": "^3.35.1",
-    "angular-instantsearch": "^3.0.0-beta.5",
+    "algoliasearch": "^4.2.0",
     "firebase": "^7.14.4",
-    "instantsearch.css": "^7.4.2",
-    "instantsearch.js": "^4.5.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.5",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "~9.1.5",
     "@angular/compiler": "~9.1.6",
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
     "@capacitor/cli": "2.1.0",
     "@ionic/angular-toolkit": "^2.1.1",
-    "@types/algoliasearch": "^3.34.10",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
